--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.1",
     "@hookform/resolvers": "^3.1.0",
     "@tanstack/react-query": "^4.29.3",
     "axios": "^1.3.6",
